# twitter-api-py

./: .env.local  DEVELOPMENT.jp.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: pypi-publish.yml  python.yml  synthetic-monitoring-test.yml  test-suite.yml
ADR/: 001_ResponseBodyに BaseModel を利用.md  002_RequestBodyにTypedDictを利用.md
examples/: get_tweets.py
examples/oauth/: 3_legged_oauth_flow.py  user_oauth.py
examples/oauth1/: 3_legged_oauth_flow.py  method_chain_user_oauth.py  method_chain_user_oauth1.py  oauth1_flow_3_legged.py
examples/oauth2/: method_chain_user_oauth2.py  oauth2_flow_with_pkce.py  user_oauth2.py  user_oauth2_flow_with_pkce.py
examples/v2/: get_tweets.py  get_tweets_search_recent.py  get_user_id_by_username.py  get_username_by_user_id.py
tests/: conftest.py
tests/contexts/: check_oauth2_user_access_token.py  make_search_stream_filter_rules.py  spawn_real_client.py  test_spawn_real_client.py
tests/data/: __init__.py  get_retweeted_by_response.json  get_tweets_search_recent_response_empty_result.json  get_user_liked_tweets_response.json  get_user_tweets_response_optional_fields.json  get_users_response.json  get_v2_dm_conversations_with_participant_dm_events_response_body.json  get_v2_tweet_response_body_all_fields.json  get_v2_tweets_response_all_fields.json  get_v2_tweets_search_all_response.json  get_v2_tweets_search_recent_response.json  get_v2_tweets_search_recent_response_all_fields.json  get_v2_tweets_search_recent_response_body_all_fields.json  get_v2_user_tweets_response_all_fields.json  get_v2_user_tweets_response_body_all_fields.json  get_v2_user_tweets_response_default_fields.json  get_v2_users_by_username_response_body_all_fields.json  post_dm_conversations_messages.json  post_v2_dm_conversations.json  tweet_mention.json
tests/types/: convinient_tweet.py  convinient_tweets_search_response_body.py  test_convinient_tweet.py  test_convinient_tweets_search_response_body.py
twitter_api/: __init__.py  error.py  warning.py
twitter_api/api/: api_resources.py  responses.py
twitter_api/client/: __init__.py  twitter_api_async_client.py  twitter_api_async_mock_client.py  twitter_api_async_real_client.py  twitter_api_client.py  twitter_api_mock_client.py  twitter_api_real_client.py
twitter_api/rate_limit/: continue_rate_limit_handling.py  rate_limit.py  rate_limit_data.py  rate_limit_decorator.py  rate_limit_info.py  rate_limit_target.py
twitter_api/ratelimit/: ratelimit.py  ratelimit_data.py  ratelimit_decorator.py  ratelimit_interface.py  ratelimit_target.py
twitter_api/resources/: api_resources.py
twitter_api/types/: _chainable.py  _generic_client.py  _model.py  _paging.py  (+16 more)
(+691 files in other folders)
