[tool.poetry]
authors = ["yassun4dev <yassun4dev@outlook.com>"]
description = "Twitter API Client by Typed Python."
name = "twitter-api-py"
packages = [{include = "twitter_api"}]
readme = "README.md"
version = "0.4.0"
license = "BSD-3-Clause"
repository = "https://github.com/yassun4dev/twitter-api-py"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.taskipy.tasks]
test = "pytest"
format = "black --target-version py310 ."
lint = "pyright twitter_api/** tests/** examples/**"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
authlib = "^1.2.0"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"
pyright = "^1.1.300"
taskipy = "^1.10.4"
pytest-asyncio = "^0.21.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 88

[tool.isort]
# make it compatible with black
line_length = 88
multi_line_output = 3
profile = "black"

[tool.flake8]
max-line-length = 200

[tool.pyright]
exclude = ["**/__pycache__"]
reportPrivateImportUsage = "none"
reportUnusedImport = true

[tool.mypy]
[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "colorama",
  "authlib",
]
